--- a/config/facet/faceted_browsing.yml
+++ b/config/facet/faceted_browsing.yml
@@ -161,7 +161,7 @@ Publication:
       value_from: related_organisms:title
   human_disease:
       label: Human Disease
-      value_from: related_human_diseases:title
+      value_from: human_diseases:title
   tag:
       label: Tag
       value_from: tags_as_text_array
